// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledBox-YaZNy gMTrGl"
  >
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
    />
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <div
        class="StyledBox-YaZNy hKbcjh"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek eMfboU"
      />
      <div
        class="StyledBox-YaZNy imFvhq"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-YaZNy gMTrGl"
  >
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
    />
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <div
        class="StyledBox-YaZNy hKbcjh"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek kpDtwP"
      />
      <div
        class="StyledBox-YaZNy imFvhq"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-YaZNy gMTrGl"
  >
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek koqsCN"
    />
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <div
        class="StyledBox-YaZNy hKbcjh"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek cxLOlY"
      />
      <div
        class="StyledBox-YaZNy imFvhq"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-YaZNy gMTrGl"
  >
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek dbIelo"
    />
    <div
      class="StyledBox-YaZNy jmBYKo"
    >
      <div
        class="StyledBox-YaZNy hKbcjh"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek fSBrRC"
      />
      <div
        class="StyledBox-YaZNy imFvhq"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledBox-YaZNy gMTrGl"
  >
    <div
      class="StyledBox-YaZNy cFpiQI"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
    />
    <div
      class="StyledBox-YaZNy idandr"
    >
      <div
        class="StyledBox-YaZNy jmBYKo"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek eMfboU"
      />
      <div
        class="StyledBox-YaZNy hiGaNc"
      >
        <div
          class="StyledBox-YaZNy hKbcjh"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
        />
        <div
          class="StyledBox-YaZNy imFvhq"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
